service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: my-app
  ports:
    - name: dummy-port
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
